--- a/web/index.html
+++ b/web/index.html
@@ -330,74 +330,80 @@
                   가장 웹 페이지에서 기본이 되는 게시판 유형입니다.
                 </p>
                 <!-- 오버효과 -->
-
                 <div class="notice_hover">
                   <h4>Mouse Hover</h4>
                   <ul>
                     <li>
-                      <a href="#"
-                        ><span
+                      <a href="#">
+                        <span
                           ><img src="img/sban01.jpg" alt="이미지1" /><em
                             >바로가기</em
                           ></span
-                        ><strong>와이어 프레임</strong></a
-                      >
+                        >
+                        <strong>와이어 프레임</strong>
+                      </a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><span
+                      <a href="#">
+                        <span
                           ><img src="img/sban02.jpg" alt="이미지2" /><em
                             >바로가기</em
                           ></span
-                        ><strong>스케치 작업 </strong></a
-                      >
+                        >
+                        <strong>스케치 작업</strong>
+                      </a>
                     </li>
-                    <li>
-                      <a href="#"
-                        ><span
+                    <li class="last">
+                      <a href="#">
+                        <span
                           ><img src="img/sban03.jpg" alt="이미지3" /><em
                             >바로가기</em
                           ></span
-                        ><strong>UI 디자인</strong></a
-                      >
+                        >
+                        <strong>UI 디자인</strong>
+                      </a>
                     </li>
                   </ul>
                 </div>
+                <!-- //오버효과 -->
 
+                <!-- 오버효과2-->
                 <div class="notice_hover2 mt15">
-                  <h4 class="ir_su">Mouse Hover2</h4>
+                  <h4 class="ir_su">Mouse Hover</h4>
                   <ul>
                     <li>
-                      <a href="#"
-                        ><span
-                          ><img src="img/sban04.jpg" alt="이미지1" /><em
+                      <a href="#">
+                        <span
+                          ><img src="img/sban04.jpg" alt="이미지4" /><em
                             >바로가기</em
                           ></span
-                        ><strong>HTML</strong></a
-                      >
+                        >
+                        <strong>HTML</strong>
+                      </a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><span
-                          ><img src="img/sban05.jpg" alt="이미지2" /><em
+                      <a href="#">
+                        <span
+                          ><img src="img/sban05.jpg" alt="이미지5" /><em
                             >바로가기</em
                           ></span
-                        ><strong>CSS</strong></a
-                      >
+                        >
+                        <strong>CSS</strong>
+                      </a>
                     </li>
-                    <li>
-                      <a href="#"
-                        ><span
-                          ><img src="img/sban06.jpg" alt="이미지3" /><em
+                    <li class="last">
+                      <a href="#">
+                        <span
+                          ><img src="img/sban06.jpg" alt="이미지6" /><em
                             >바로가기</em
                           ></span
-                        ><strong>jQuery</strong></a
-                      >
+                        >
+                        <strong>jQuery</strong>
+                      </a>
                     </li>
                   </ul>
                 </div>
-
-                <!-- //오버효과 -->
+                <!-- //오버효과2-->
               </div>
               <!-- //col4 -->
               <div class="column col5">
@@ -408,7 +414,6 @@
                 <p class="ico_desc">
                   가장 웹 페이지에서 기본이 되는 게시판 유형입니다.
                 </p>
-
                 <!-- 탭메뉴 -->
                 <div class="tab_menu">
                   <h4 class="ir_su">탭 메뉴</h4>
@@ -478,9 +483,7 @@
                     </li>
                   </ul>
                 </div>
-
                 <!-- //탭메뉴 -->
-
                 <!-- 게시판4 -->
                 <div class="notice4 mt15">
                   <h4>최신 <em>공지사항</em></h4>
@@ -514,21 +517,71 @@
                 <p class="ico_desc">
                   가장 웹 페이지에서 기본이 되는 게시판 유형입니다.
                 </p>
+                <!-- 갤러리 -->
+                <div class="gallery">
+                  <h4>포트폴리오</h4>
+                  <div class="gallery_btn">
+                    <ul>
+                      <li class="gb_icon1">
+                        <a href="#"><span class="ir_pm">시작</span></a>
+                      </li>
+                      <li class="gb_icon2">
+                        <a href="#"><span class="ir_pm">정지</span></a>
+                      </li>
+                      <li class="gb_icon3">
+                        <a href="#"><span class="ir_pm">이전이미지</span></a>
+                      </li>
+                      <li class="gb_icon4">
+                        <a href="#"><span class="ir_pm">다음이미지</span></a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="gallery_img">
+                    <ul>
+                      <li>
+                        <a href="#"
+                          ><img src="img/gallery01.jpg" alt="갤러리1"
+                        /></a>
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><img src="img/gallery02.jpg" alt="갤러리2"
+                        /></a>
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><img src="img/gallery03.jpg" alt="갤러리3"
+                        /></a>
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><img src="img/gallery04.jpg" alt="갤러리4"
+                        /></a>
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><img src="img/gallery05.jpg" alt="갤러리5"
+                        /></a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- //갤러리 -->
               </div>
               <!-- //col6 -->
             </div>
           </div>
         </div>
-        <!--// cont_cont -->
+        <!-- //cont_cont -->
       </div>
-      <!--// contents -->
+      <!-- //contents -->
+
       <div id="footer">
         <div class="container">footer</div>
       </div>
-      <!--// footer -->
+      <!-- //footer -->
     </div>
-    <!--// wrap -->
+    <!-- //wrap -->
   </body>
 </html>
-
 <!-- http://whrksp126.dothome.co.kr/web/index.html -->
