--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,7 @@
     <!-- CSS STYLE -->
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/slick.css" />
 
     <!-- 웹폰트 -->
     <link
@@ -130,52 +131,87 @@
           <div class="container">
             <div class="tit">
               <h2>"나는 퍼블리셔다"</h2>
-              <a href="#" class="btn"><span class="ir_pm"> 전체 메뉴</span></a>
+              <a href="#" class="btn"><span class="ir_pm">전체메뉴</span></a>
             </div>
           </div>
         </div>
-        <!--// cont_tit -->
-
+        <!-- //con_tit -->
         <div id="cont_ban">
           <div class="container">
             <div class="ban">
-              <a href="#" class="prev"
+              <!-- <a href="#" class="prev"
                 ><span class="ir_pm">이전 이미지</span></a
               >
               <ul>
-                <li>
+                <li class="ban_img1">
                   <a href="#"
-                    ><img
-                      class="ban_img1"
-                      src="img/banner_link1.jpg"
-                      alt="웹 표준 지침서 보기"
+                    ><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"
                   /></a>
                 </li>
-                <li>
+                <li class="ban_img2">
                   <a href="#"
-                    ><img
-                      class="ban_img2"
-                      src="img/banner_link2.jpg"
-                      alt="CSS 버츤 만들기"
+                    ><img src="img/banner_link2.jpg" alt="CSS 버튼 만들기"
                   /></a>
                 </li>
-                <li>
+                <li class="ban_img3">
                   <a href="#"
-                    ><img
-                      class="ban_img3"
-                      src="img/banner_link3.jpg"
-                      alt="로그인 폼 만들기"
+                    ><img src="img/banner_link3.jpg" alt="로그인 폼 만들기"
                   /></a>
                 </li>
               </ul>
               <a href="#" class="next"
                 ><span class="ir_pm">다음 이미지</span></a
-              >
+              > -->
+
+              <div>
+                <a href="#"
+                  ><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"
+                /></a>
+              </div>
+              <div>
+                <a href="#"
+                  ><img src="img/banner_link2.jpg" alt="CSS 버튼 만들기"
+                /></a>
+              </div>
+              <div>
+                <a href="#"
+                  ><img src="img/banner_link3.jpg" alt="로그인 폼 만들기"
+                /></a>
+              </div>
+              <div>
+                <a href="#"
+                  ><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"
+                /></a>
+              </div>
+              <div>
+                <a href="#"
+                  ><img src="img/banner_link2.jpg" alt="CSS 버튼 만들기"
+                /></a>
+              </div>
+              <div>
+                <a href="#"
+                  ><img src="img/banner_link3.jpg" alt="로그인 폼 만들기"
+                /></a>
+              </div>
+              <div>
+                <a href="#"
+                  ><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"
+                /></a>
+              </div>
+              <div>
+                <a href="#"
+                  ><img src="img/banner_link2.jpg" alt="CSS 버튼 만들기"
+                /></a>
+              </div>
+              <div>
+                <a href="#"
+                  ><img src="img/banner_link3.jpg" alt="로그인 폼 만들기"
+                /></a>
+              </div>
             </div>
           </div>
         </div>
-        <!--// cont_ban -->
-
+        <!-- //con_ban -->
         <div id="cont_cont">
           <div class="container">
             <div class="cont">
@@ -187,7 +223,6 @@
                 <p class="ico_desc">
                   가장 웹 페이지에서 기본이 되는 게시판 유형입니다.
                 </p>
-
                 <!-- 게시판 -->
                 <div class="notice">
                   <h4>Web Publisher Notice</h4>
@@ -222,6 +257,7 @@
                   </ul>
                   <a href="#" class="more ir_pm" title="더보기">더보기</a>
                 </div>
+                <!-- //게시판 -->
                 <!-- 게시판2 -->
                 <div class="notice2">
                   <h4>Web Designer Notice</h4>
@@ -255,10 +291,9 @@
                   </ul>
                   <a href="#" class="more ir_pm" title="더보기">더보기</a>
                 </div>
-                <!-- //게시판 2 -->
+                <!-- //게시판2 -->
               </div>
               <!-- //col1 -->
-
               <div class="column col2">
                 <h3>
                   <span class="ico_img ir_pm">아이콘</span
@@ -267,10 +302,9 @@
                 <p class="ico_desc">
                   가장 웹 페이지에서 기본이 되는 게시판 유형입니다.
                 </p>
-
                 <!-- 게시판3 -->
                 <div class="notice3">
-                  <h4>HTML Reference</h4>
+                  <h4>Html Reference</h4>
                   <ul>
                     <li>
                       <a href="#">
@@ -319,6 +353,94 @@
                 <p class="ico_desc">
                   가장 웹 페이지에서 기본이 되는 게시판 유형입니다.
                 </p>
+
+                <!-- 로그인 -->
+
+                <div id="login-wrap">
+                  <h4 class="ir_su">로그인 정보</h4>
+                  <form id="login_form" name="login_form" action="post">
+                    <fieldset>
+                      <legend class="ir_su">로그인 및 관련 설정</legend>
+
+                      <div class="login_header">
+                        <h5 class="ir_su">로그인 보안</h5>
+                        <div class="lh_check">
+                          <input
+                            id="infor_check"
+                            type="checkbox"
+                            class="input_check"
+                          />
+                          <label for="infor_check">
+                            <!-- 상위 태그와 연결 하기 위해서 for"상위 id 값" -->
+                            로그인 상태 유지</label
+                          >
+                        </div>
+                        <div class="lh_ip">IP보안 <em>ON</em></div>
+                      </div>
+
+                      <div class="login_content">
+                        <h5 class="ir_su">로그인 영역</h5>
+                        <div class="lc_text">
+                          <label for="uid" class="ir_su">아이디</label>
+                          <input
+                            type="text"
+                            id="uid"
+                            name="uid"
+                            class="input_text"
+                            maxlength="20"
+                          />
+                          <label for="upw" class="ir_su">비밀번호</label>
+                          <input
+                            type="password"
+                            id="upw"
+                            name="upw"
+                            class="input_text"
+                            maxlength="20"
+                          />
+                        </div>
+                        <button class="lc_btn" type="submit">
+                          <!-- 데이터를 전송할 때는 type="submit" -->
+                          로그인
+                        </button>
+                      </div>
+
+                      <div class="login_footer">
+                        <h5 class="ir_su">로그인 문제해결</h5>
+                        <ul>
+                          <li>
+                            <a href="#"><strong>회원가입</strong></a> /
+                          </li>
+                          <li>
+                            <a href="#">아이디</a>&middot;<a href="#"
+                              >비밀번호 찾기</a
+                            >
+                          </li>
+                        </ul>
+                      </div>
+                    </fieldset>
+                  </form>
+                </div>
+
+                <!-- //로그인 -->
+
+                <!-- 팝업 -->
+
+                <div class="popup">
+                  <h4>Advertisement</h4>
+                  <ul>
+                    <li>
+                      <a href="#"><img src="img/sban07.jpg" alt="이미지1" /></a>
+                    </li>
+                    <li>
+                      <a href="#"><img src="img/sban08.jpg" alt="이미지2" /></a>
+                    </li>
+                    <li class="last">
+                      <a href="#"><img src="img/sban09.jpg" alt="이미지3" /></a>
+                    </li>
+                  </ul>
+                </div>
+
+                <!-- //팝업 -->
               </div>
               <!-- //col3 -->
               <div class="column col4">
@@ -517,9 +639,11 @@
                 <p class="ico_desc">
                   가장 웹 페이지에서 기본이 되는 게시판 유형입니다.
                 </p>
+
                 <!-- 갤러리 -->
+
                 <div class="gallery">
-                  <h4>포트폴리오</h4>
+                  <h4>포토폴리오</h4>
                   <div class="gallery_btn">
                     <ul>
                       <li class="gb_icon1">
@@ -566,6 +690,7 @@
                     </ul>
                   </div>
                 </div>
+
                 <!-- //갤러리 -->
               </div>
               <!-- //col6 -->
@@ -585,13 +710,15 @@
               <li><a href="#">사이트 이용약관</a></li>
               <li><a href="#">사이트 운영규칙</a></li>
               <li>
-                <a href="#"><strong>개인정보취급방침</strong></a>
+                <a href="#"><strong>개인정보 취급방침</strong></a>
               </li>
               <li><a href="#">책임의 한계와 법적고지</a></li>
               <li><a href="#">게시중단요청 서비스</a></li>
               <li><a href="#">고객센터</a></li>
             </ul>
-            <address>Copyright©webstoryboy.co.kr All Right Reserved</address>
+            <address>
+              Copyright&copy;webstoryboy.co.kr All Right Rederved
+            </address>
             <div class="w3c">
               <a href="http://validator.w3.org/check?uri=referer">
                 <img
@@ -604,7 +731,7 @@
               <a href="http://jigsaw.w3.org/css-validator/check/referer">
                 <img
                   style="border: 0; width: 88px; height: 31px"
-                  src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                  src="http://jigsaw.w3.org/css-validator/images/vcss"
                   alt="올바른 CSS입니다!"
                 />
               </a>
@@ -615,6 +742,36 @@
       <!-- //footer -->
     </div>
     <!-- //wrap -->
+
+    <!-- 스크립트 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script type="text/javascript">
+      // 배너
+      $(".ban").slick({
+        infinite: true,
+        slidesToShow: 3,
+        slidesToScroll: 3,
+        autoplay: true,
+        autoplaySpeed: 3000,
+        dots: true,
+      });
+
+      //버튼을 클릭하면 전체 메뉴를 보이게 하세요.
+      $(".tit .btn").click(function (e) {
+        e.preventDefault(); // 버튼을 클릭하면 화면이 상단으로 올라간 후 실행 되는 것을 방지함
+        // $("#cont_nav").css("display", "block");
+        // $("#cont_nav").show();
+        // $("#cont_nav").fadeIn(); // 서서히 나타남
+        // $("#cont_nav").slideDown(); // 애니메이션으로 보이지만 한번만 사용가능
+        // $("#cont_nav").toggle(); // 나타났다가 사라지는게 가능함
+        // $("#cont_nav").fadeToggle(); // 서서히 나타났다가 서서히 사라지는게 함
+        $("#cont_nav").slideToggle(200); // 애니메이션으로 나타났다가 애니메이션으로 사라지는게 함
+        // $(".tit .btn").addClass("on"); // 클릭히만 해당 태그에 클래스가 생성됨
+        $(this).toggleClass("on"); // 클릭하면 해당 태그에 클래스가 생성되고 한번더 클릭하면 사라짐
+      });
+    </script>
   </body>
 </html>
+
 <!-- http://whrksp126.dothome.co.kr/web/index.html -->
