--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="css/lightgallery.css" />
 
     <!-- 웹폰트 -->
     <link
@@ -388,6 +389,7 @@
                             name="uid"
                             class="input_text"
                             maxlength="20"
+                            placeholder="아이디"
                           />
                           <label for="upw" class="ir_su">비밀번호</label>
                           <input
@@ -396,6 +398,7 @@
                             name="upw"
                             class="input_text"
                             maxlength="20"
+                            placeholder="비밀번호"
                           />
                         </div>
                         <button class="lc_btn" type="submit">
@@ -428,14 +431,28 @@
                 <div class="popup">
                   <h4>Advertisement</h4>
                   <ul>
-                    <li>
+                    <li class="layer">
                       <a href="#"><img src="img/sban07.jpg" alt="이미지1" /></a>
                     </li>
-                    <li>
+                    <li class="window">
                       <a href="#"><img src="img/sban08.jpg" alt="이미지2" /></a>
                     </li>
-                    <li class="last">
-                      <a href="#"><img src="img/sban09.jpg" alt="이미지3" /></a>
+                    <li class="last lightgallery">
+                      <a href="img/webstandard3.jpg"
+                        ><img src="img/sban09.jpg" alt="이미지3"
+                      /></a>
+                      <a href="img/webstandard2.jpg" style="display: none"
+                        ><img src="img/sban08.jpg" alt="이미지3"
+                      /></a>
+                      <a href="img/webstandard1.jpg" style="display: none"
+                        ><img src="img/sban07.jpg" alt="이미지3"
+                      /></a>
+                      <a href="img/webstandard2.jpg" style="display: none"
+                        ><img src="img/sban06.jpg" alt="이미지3"
+                      /></a>
+                      <a href="img/webstandard3.jpg" style="display: none"
+                        ><img src="img/sban05.jpg" alt="이미지3"
+                      /></a>
                     </li>
                   </ul>
                 </div>
@@ -565,7 +582,7 @@
                     </li>
                     <li>
                       <a href="#"> 공지사항2</a>
-                      <ul style="display: none">
+                      <ul>
                         <li>
                           <a href="#"
                             >두 번째 공지사항 탭 메뉴 테스트 목록입니다.</a
@@ -585,7 +602,7 @@
                     </li>
                     <li>
                       <a href="#"> 공지사항3</a>
-                      <ul style="display: none">
+                      <ul>
                         <li>
                           <a href="#"
                             >세 번째 공지사항 탭 메뉴 테스트 목록입니다.</a
@@ -645,7 +662,7 @@
                 <div class="gallery">
                   <h4>포토폴리오</h4>
                   <div class="gallery_btn">
-                    <ul>
+                    <!-- <ul>
                       <li class="gb_icon1">
                         <a href="#"><span class="ir_pm">시작</span></a>
                       </li>
@@ -658,10 +675,23 @@
                       <li class="gb_icon4">
                         <a href="#"><span class="ir_pm">다음이미지</span></a>
                       </li>
-                    </ul>
+                    </ul> -->
+
+                    <button class="gb_icon1 play">
+                      <span class="ir_pm">시작</span>
+                    </button>
+                    <button class="gb_icon2 pause">
+                      <span class="ir_pm">정지</span>
+                    </button>
+                    <button class="gb_icon3 prev">
+                      <span class="ir_pm">이전이미지</span>
+                    </button>
+                    <button class="gb_icon4 next">
+                      <span class="ir_pm">다음</span>
+                    </button>
                   </div>
                   <div class="gallery_img">
-                    <ul>
+                    <!-- <ul> 
                       <li>
                         <a href="#"
                           ><img src="img/gallery01.jpg" alt="갤러리1"
@@ -687,7 +717,33 @@
                           ><img src="img/gallery05.jpg" alt="갤러리5"
                         /></a>
                       </li>
-                    </ul>
+                    </ul> -->
+
+                    <div>
+                      <a href="#"
+                        ><img src="img/gallery01.jpg" alt="갤러리1"
+                      /></a>
+                    </div>
+                    <div>
+                      <a href="#"
+                        ><img src="img/gallery02.jpg" alt="갤러리2"
+                      /></a>
+                    </div>
+                    <div>
+                      <a href="#"
+                        ><img src="img/gallery03.jpg" alt="갤러리3"
+                      /></a>
+                    </div>
+                    <div>
+                      <a href="#"
+                        ><img src="img/gallery04.jpg" alt="갤러리4"
+                      /></a>
+                    </div>
+                    <div>
+                      <a href="#"
+                        ><img src="img/gallery05.jpg" alt="갤러리5"
+                      /></a>
+                    </div>
                   </div>
                 </div>
 
@@ -743,34 +799,21 @@
     </div>
     <!-- //wrap -->
 
-    <!-- 스크립트 -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script type="text/javascript">
-      // 배너
-      $(".ban").slick({
-        infinite: true,
-        slidesToShow: 3,
-        slidesToScroll: 3,
-        autoplay: true,
-        autoplaySpeed: 3000,
-        dots: true,
-      });
+    <!-- 레이어 팝업 -->
 
-      //버튼을 클릭하면 전체 메뉴를 보이게 하세요.
-      $(".tit .btn").click(function (e) {
-        e.preventDefault(); // 버튼을 클릭하면 화면이 상단으로 올라간 후 실행 되는 것을 방지함
-        // $("#cont_nav").css("display", "block");
-        // $("#cont_nav").show();
-        // $("#cont_nav").fadeIn(); // 서서히 나타남
-        // $("#cont_nav").slideDown(); // 애니메이션으로 보이지만 한번만 사용가능
-        // $("#cont_nav").toggle(); // 나타났다가 사라지는게 가능함
-        // $("#cont_nav").fadeToggle(); // 서서히 나타났다가 서서히 사라지는게 함
-        $("#cont_nav").slideToggle(200); // 애니메이션으로 나타났다가 애니메이션으로 사라지는게 함
-        // $(".tit .btn").addClass("on"); // 클릭히만 해당 태그에 클래스가 생성됨
-        $(this).toggleClass("on"); // 클릭하면 해당 태그에 클래스가 생성되고 한번더 클릭하면 사라짐
-      });
-    </script>
+    <div id="layer">
+      <img src="img/webstandard1.jpg" alt="웹표준 사이트" />
+      <a href="#" class="close">Close</a>
+    </div>
+
+    <!-- //레이어 팝업 -->
+
+    <!-- 스크립트 -->
+    <script src="js/jquery.min_1.12.4.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/lightgallery.min.js"></script>
+    <script src="js/lightgallery-all.min.js"></script>
+    <script src="js/custom.js"></script>
   </body>
 </html>
 
